Katman isimlerinin daha anlaşılır olması için isim değişikliği yapıldı.

--- a/DemoBank.DataAccess/Week4-DemoBank.DataAccess.csproj
+++ b/DemoBank.DataAccess/Week4-DemoBank.DataAccess.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DemoBank.Entities\DemoBank.Entities.csproj" />
+    <ProjectReference Include="..\DemoBank.Entities\Week4-DemoBank.Entities.csproj" />
   </ItemGroup>
 
 </Project>
