--- a/BankDemo/Week4-BankDemo.csproj
+++ b/BankDemo/Week4-BankDemo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DemoBank.Business\DemoBank.Business.csproj" />
+    <ProjectReference Include="..\DemoBank.Business\Week4-DemoBank.Business.csproj" />
   </ItemGroup>
 
 </Project>
