--- a/DemoBank.DataAccess/DemoBank.DataAccess.csproj
+++ b/DemoBank.DataAccess/DemoBank.DataAccess.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DemoBank.Entities\Week4-DemoBank.Entities.csproj" />
+    <ProjectReference Include="..\DemoBank.Entities\DemoBank.Entities.csproj" />
   </ItemGroup>
 
 </Project>
